# Statathon-2025

./: .replit  ACCESS_INFO.md  LOCAL_SETUP.md  README.md  README_FINAL.md  README_GUI.md  app.py  auth.py  comprehensive_test.py  comprehensive_test_data.csv  gui_app.py  guide.txt  install_local.py  launch_gui.py  local_requirements.txt  pyproject.toml  replit.md  test_data.csv  test_data_auto.csv  test_dataset_sample.csv  test_gui.py  test_gui_comprehensive.py  test_gui_data.csv  test_report.txt  user_profile.py
.streamlit/: config.toml
attached_assets/: Pasted--SafeData-Pipeline-Python-Application-Development-Prompt-Project-Overview-Create-a-comprehens-1753860990663_1753860990664.txt  Pasted-Of-course-here-is-a-highly-polished-professional-level-prompt-crafted-to-get-the-absolute-bes-1754374747667_1754374747668.txt
config/: privacy_profiles.json
core/: __init__.py  data_handler.py  privacy_enhancement.py  report_generator.py  risk_assessment.py  utility_measurement.py
templates/: report_template.html
utils/: __init__.py  encryption.py  file_operations.py  validation.py
