[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "chardet>=5.2.0",
    "cryptography>=45.0.5",
    "fpdf2>=2.8.3",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.3",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "streamlit>=1.47.1",
]
